--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -1,10 +1,38 @@
 $late: red
 
+table
+  border-collapse: collapse
+  border-left: 1px solid gray
+  border-right: 1px solid gray
+table, td, th
+  border-top: 1px solid gray
+  border-bottom: 1px solid gray
+#content
+  margin: auto
+  width: 950px
 .late
   color: $late
 .tn
   min-width: 50px
   text-align: center
-
-.target
-  max-width: 400px
+.dateRequested
+  text-align: center
+  max-width: 75px
+.dueDate
+  text-align: center
+  max-width: 75px
+.requestType
+  text-align: center
+  max-width: 50px
+.deviceType
+  max-width: 300px
+.priority
+  text-align: center
+  max-width: 50px
+.brand
+.location
+  text-align: center
+  min-width: 100px
+.status
+  text-align: center
+  min-width: 100px
