--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -7,6 +7,8 @@ table
 table, td, th
   border-top: 1px solid gray
   border-bottom: 1px solid gray
+tr
+  height: 25px
 #content
   margin: auto
   width: 950px
@@ -15,12 +17,17 @@ table, td, th
 .tn
   min-width: 50px
   text-align: center
+.id
+  max-width: 85px
+  text-align: center
 .dateRequested
   text-align: center
-  max-width: 75px
+  min-width: 85px
+  max-width: 85px
 .dueDate
   text-align: center
-  max-width: 75px
+  min-width: 85px
+  max-width: 85px
 .requestType
   text-align: center
   max-width: 50px
@@ -29,7 +36,6 @@ table, td, th
 .priority
   text-align: center
   max-width: 50px
-.brand
 .location
   text-align: center
   min-width: 100px
