--- a/views/index.haml
+++ b/views/index.haml
@@ -6,7 +6,8 @@
   %body
     #content
       Home
-      %a{:href => '/edit'} Edit
+      %a{:href => '/tns/edit'} Edit
+      %a{:href => '/tns/status/Complete'} Completed
       %a{:href => '/upload'} Upload File
       %br/
       %table#tns
@@ -19,26 +20,17 @@
           %th.location Location
           %th.status Status
         - @tns.each do |t|
-          - begin
-            - due_date = Date.parse(t.due_date)
-            - due_date = Date.civil(due_date.year + 2000, due_date.mon, due_date.day) if due_date.year < 2000
-            %tr.row
-              %td.tn= t.tn
-              %td.dateRequested= t.date_requested
-              - if Date.today > due_date
+          %tr.row
+            %td.tn= t.tn
+            %td.dateRequested= t.date_requested
+            - unless t.due_date.nil?
+              - if Date.today > t.due_date
                 %td.dueDate.late= t.due_date
               - else
                 %td.dueDate= t.due_date
-              %td.requestType= t.request_type
-              %td.requestor= t.requestor
-              %td.location= t.location
-              %td.status= t.status
-          - rescue Exception
-            %tr.row
-              %td.tn= t.tn
-              %td.dateRequested= t.date_requested
+            - else
               %td.dueDate= t.due_date
-              %td.requestType= t.request_type
-              %td.requestor= t.requestor
-              %td.location= t.location
-              %td.status= t.status
+            %td.requestType= t.request_type
+            %td.requestor= t.requestor
+            %td.location= t.location
+            %td.status= t.status
