--- a/views/upload.haml
+++ b/views/upload.haml
@@ -6,7 +6,8 @@
   %body
     #content
       %a{:href => '/'} Home
-      %a{:href => '/edit'} Edit
+      %a{:href => '/tns/edit'} Edit
+      %a{:href => '/tns/status/Complete'} Completed
       Upload File
       %br/
       %form{:action => "/upload", :method => "post", :enctype => "multipart/form-data"}
