--- a/views/status_complete.haml
+++ b/views/status_complete.haml
@@ -5,9 +5,10 @@
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheet.css'}
   %body
     #content
+      #flash &nbsp;
       %a{:href => '/'} Home
       %a{:href => '/tns/edit'} Edit
-      %a{:href => '/tns/status/Complete'} Completed
+      Completed
       %a{:href => '/upload'} Upload File
       %br/
       %table#tns
