--- a/views/upload.haml
+++ b/views/upload.haml
@@ -5,6 +5,7 @@
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheet.css'}
   %body
     #content
+      #flash &nbsp;
       %a{:href => '/'} Home
       %a{:href => '/tns/edit'} Edit
       %a{:href => '/tns/status/Complete'} Completed
