--- a/views/status_complete.haml
+++ b/views/status_complete.haml
@@ -3,44 +3,34 @@
   %head
     %title Queue to Do
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheet.css'}
+    %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
+    %script{:type => 'text/javascript', :src => '/q.js'}
   %body
     #content
-      #flash &nbsp;
-      %a{:href => '/'} Home
-      %a{:href => '/tns/edit'} Edit
-      Completed
-      %a{:href => '/upload'} Upload File
-      %br/
+      %br
+      %br
+      #menu_float
+        #menu
+          %a{:href => '/'} Home
+          %a{:href => '/tns'} All
+          Completed
+          %a{:href => '/upload'} Upload File
+        #flash &nbsp;
       %table#tns
         %tr#headers
           %th.tn TN
-          %th.dateRequested Date Requested
-          %th.dueDate Due Date
-          %th.requestType Request Type
+          %th.dateRequested Requested
+          %th.dueDate Due
+          %th.requestType Type
           %th.requestor Requestor
           %th.location Location
           %th.status Status
         - @tns.each do |t|
-          - begin
-            - due_date = Date.parse(t.due_date)
-            - due_date = Date.civil(due_date.year + 2000, due_date.mon, due_date.day) if due_date.year < 2000
-            %tr.row
-              %td.tn= t.tn
-              %td.dateRequested= t.date_requested
-              - if Date.today > due_date
-                %td.dueDate.late= t.due_date
-              - else
-                %td.dueDate= t.due_date
-              %td.requestType= t.request_type
-              %td.requestor= t.requestor
-              %td.location= t.location
-              %td.status= t.status
-          - rescue Exception
-            %tr.row
-              %td.tn= t.tn
-              %td.dateRequested= t.date_requested
-              %td.dueDate= t.due_date
-              %td.requestType= t.request_type
-              %td.requestor= t.requestor
-              %td.location= t.location
-              %td.status= t.status
+          %tr.row{:id => "#{t.tn}"}
+            %td.tn= t.tn
+            %td.dateRequested= t.date_requested
+            %td.dueDate= t.due_date
+            %td.requestType= t.request_type
+            %td.requestor= t.requestor
+            %td.location= t.location
+            %td.status= t.status
