--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -3,9 +3,7 @@ $late: red
 
 table
   border-collapse: collapse
-  border-left: 1px solid gray
-  border-right: 1px solid gray
-table, td, th
+td
   border-top: 1px solid gray
   border-bottom: 1px solid gray
 tr
@@ -14,11 +12,27 @@ tr
   margin: auto
   width: 950px
   font-family: helvetica
+#menu_float
+  position: absolute
+  top: 0
+  left: 0
+  font-family: helvetica
+  z-index: 10
+  padding: 5px
+  background: #cccccc
+  border: 1px solid #cccccc
+  text-align: center
+  font-weight: bold
+  width: 99%
+#menu
+  padding: 3px
 #flash
+  padding-top: 4px
+  padding-bottom: 2px
   margin: auto
   width: 300px
+  font-weight: normal
   text-align: center
-  visibility: hidden
 .complete
   font-style: italic
   color: $complete
@@ -27,9 +41,6 @@ tr
 .tn
   min-width: 60px
   max-width: 60px
-  text-align: center
-.id
-  max-width: 85px
   text-align: center
 .dateRequested
   text-align: center
@@ -41,15 +52,19 @@ tr
   max-width: 95px
 .requestType
   text-align: center
-  max-width: 60px
-.deviceType
-  max-width: 300px
-.priority
-  text-align: center
+  min-width: 50px
   max-width: 50px
+.requestor
+  min-width: 450px
 .location
   text-align: center
   min-width: 100px
 .status
+  text-align: center
+  min-width: 100px
+.statusUpdate
+  text-align: center
+  min-width: 100px
+.locationUpdate
   text-align: center
   min-width: 100px
