--- a/views/location.haml
+++ b/views/location.haml
@@ -17,7 +17,7 @@
           %a{:href => '/upload'} Upload File
         #flash &nbsp;
       %table#tns
-        %tr#headers
+        %tr.headers
           %th TN
           %th Due
           %th Type
@@ -25,16 +25,31 @@
           %th Location
           %th Status
         - @tns.each do |t|
-          %tr.row{:id => "#{t.tn}"}
-            %td.tn= t.tn
-            - unless t.due_date.nil?
-              - if Date.today > t.due_date
-                %td.dueDate.late= t.due_date
+          - if t.status == "Complete"
+            %tr.row.complete{:id => "#{t.tn}"}
+              %td.tn= t.tn
+              - unless t.due_date.nil?
+                - if Date.today > t.due_date && t.status != "Complete"
+                  %td.dueDate.late= t.due_date
+                - else
+                  %td.dueDate= t.due_date
               - else
                 %td.dueDate= t.due_date
-            - else
-              %td.dueDate= t.due_date
-            %td.requestType= t.request_type
-            %td.requestor= t.requestor
-            %td.location= t.location
-            %td.status= t.status
+              %td.requestType= t.request_type
+              %td.requestor= t.requestor
+              %td.location= t.location
+              %td.status= t.status
+          - else
+            %tr.row{:id => "#{t.tn}"}
+              %td.tn= t.tn
+              - unless t.due_date.nil?
+                - if Date.today > t.due_date && t.status != "Complete"
+                  %td.dueDate.late= t.due_date
+                - else
+                  %td.dueDate= t.due_date
+              - else
+                %td.dueDate= t.due_date
+              %td.requestType= t.request_type
+              %td.requestor= t.requestor
+              %td.location= t.location
+              %td.status= t.status
