--- a/views/upload.haml
+++ b/views/upload.haml
@@ -6,16 +6,16 @@
     %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
     %script{:type => 'text/javascript', :src => '/q.js'}
   %body
+    #menu_stuff
+      #menu_outer
+        #menu_bg
+          #menu
+            %a{:href => '/'} Home
+            %a{:href => '/tns'} All
+            %a{:href => '/tns/status/Complete'} Completed
+            Upload File
+          #flash &nbsp;
     #content
-      %br/
-      %br/
-      #menu_float
-        #menu
-          %a{:href => '/'} Home
-          %a{:href => '/tns'} All
-          %a{:href => '/tns/status/Complete'} Completed
-          Upload File
-        #flash &nbsp;
       %form{:action => "/upload", :method => "post", :enctype => "multipart/form-data"}
         %input{:type => "file", :name => "file"}
         %input{:type => "submit", :value => "Bang!"}
