Added search box to upper right of every page

--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -38,6 +38,12 @@ tr
   padding: 8px
   display: block
   font-weight: bold
+#search
+  padding: 9px
+  display: block
+  position: fixed
+  top: 0
+  right: 0
 #flash
   padding-top: 4px
   padding-bottom: 4px
