--- a/views/search.haml
+++ b/views/search.haml
@@ -19,25 +19,28 @@
               %input{:type => 'textarea', :name => 'q'}
           #flash &nbsp;
     #content
-      %table#tns
-        %tr.headers
-          %th TN
-          %th Due
-          %th Type
-          %th Requestor
-          %th Location
-          %th Status
-        - @tns.each do |t|
-          %tr.row{:id => "#{t.tn}"}
-            %td.tn= t.tn
-            - unless t.due_date.nil?
-              - if Date.today > t.due_date
-                %td.dueDate.late= t.due_date
+      - if @tns[0].nil?
+        #results There were no matches to your search query.
+      - else
+        %table#tns
+          %tr.headers
+            %th TN
+            %th Due
+            %th Type
+            %th Requestor
+            %th Location
+            %th Status
+          - @tns.each do |t|
+            %tr.row{:id => "#{t.tn}"}
+              %td.tn= t.tn
+              - unless t.due_date.nil?
+                - if Date.today > t.due_date
+                  %td.dueDate.late= t.due_date
+                - else
+                  %td.dueDate= t.due_date
               - else
                 %td.dueDate= t.due_date
-            - else
-              %td.dueDate= t.due_date
-            %td.requestType= t.request_type
-            %td.requestor= t.requestor
-            %td.location= t.location
-            %td.status= t.status
+              %td.requestType= t.request_type
+              %td.requestor= t.requestor
+              %td.location= t.location
+              %td.status= t.status
