--- a/views/tns.haml
+++ b/views/tns.haml
@@ -14,6 +14,9 @@
             All
             %a{:href => '/tns/status/Complete'} Completed
             %a{:href => '/upload'} Upload File
+          #search
+            %form{:method => 'get', :action => '/search'}
+              %input{:type => 'textarea', :name => 'q'}
           #flash &nbsp;
     #content
       %table#tns
