--- a/views/location.haml
+++ b/views/location.haml
@@ -29,7 +29,7 @@
           %th Status
         - @tns.each do |t|
           - if t.status == "Complete"
-            %tr.row.complete{:id => "#{t.tn}"}
+            %tr.row.complete{:id => "#{t.id}", :data => {:tn => "#{t.tn}"}}
               %td.tn= t.tn
               - unless t.due_date.nil?
                 - if Date.today > t.due_date && t.status != "Complete"
@@ -43,7 +43,7 @@
               %td.location= t.location
               %td.status= t.status
           - else
-            %tr.row{:id => "#{t.tn}"}
+            %tr.row{:id => "#{t.id}", :data => {:tn => "#{t.tn}"}}
               %td.tn= t.tn
               - unless t.due_date.nil?
                 - if Date.today > t.due_date && t.status != "Complete"
