--- a/views/status_complete.haml
+++ b/views/status_complete.haml
@@ -28,7 +28,7 @@
           %th Location
           %th Status
         - @tns.each do |t|
-          %tr.row{:id => "#{t.tn}"}
+          %tr.row{:id => "#{t.id}", :data => {:tn => "#{t.tn}"}}
             %td.tn= t.tn
             %td.dueDate= t.due_date
             %td.requestType= t.request_type
