Added feature: Delete TNs. Added jQueryUI for stylizing dialogs

--- a/views/index.haml
+++ b/views/index.haml
@@ -3,8 +3,10 @@
   %head
     %title Queue to Do
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheet.css'}
+    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/smoothness/jquery-ui-1.8.6.custom.css'}
     %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
     %script{:type => 'text/javascript', :src => '/q.js'}
+    %script{:type => 'text/javascript', :src => '/js/jquery-ui-1.8.6.custom.min.js'}
   %body
     #menu_stuff
       #menu_outer
